# specodex

./: CLAUDE.md  FUTURE.md  HISTORY.md  PUBLIC.md  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  drift-audit.yml  security.yml  staging.yml
app/: .env.example  package-lock.json  package.json
app/backend/: jest-dynamodb-config.js  jest.config.js  jest.integration.config.js  package.json
app/backend/src/: index.ts  openapi.json
app/backend/tests/: apiKeyPaygate.test.ts  auth-audit.test.ts  auth.routes.test.ts  db.test.ts  log-leak.test.ts  log.test.ts  product-types.test.ts  products.contract.test.ts  projects.idor.test.ts  relations.test.ts  resilience.test.ts  routes.test.ts
app/backend_py/: README.md  pyproject.toml
app/backend_py/src/: config.py  main.py
app/backend_py/src/db/: dynamodb.py  projects.py
app/backend_py/src/middleware/: auth.py  paygate.py  readonly.py  v2_prefix.py
app/backend_py/src/routes/: admin.py  apikeys.py  auth.py  compat.py  datasheets.py  health.py  products.py  projects.py  relations.py  search.py  subscription.py  upload.py
app/backend_py/src/services/: search.py  stripe_client.py
app/backend_py/tests/: conftest.py  test_admin_routes.py  test_auth_middleware.py  test_auth_routes.py  test_compat_relations.py  test_datasheets.py  test_health.py  test_paygate.py  test_products.py  test_products_crud.py  test_projects.py  test_readonly_middleware.py  test_search_route.py  test_search_service.py  test_subscription.py  test_upload.py  test_v2_prefix.py
app/frontend/: eslint.config.js  package.json
app/frontend/src/: App.css  App.tsx  vite-env.d.ts
app/infrastructure/: package.json  tsconfig.json
app/infrastructure/lib/: api-stack.ts  config.ts  database-stack.ts  frontend-stack.ts
app/infrastructure/test/: auth-stack.test.ts  waf-alarms.test.ts
cli/: admin.py  audit_dedupes.py  audit_fields.py  audit_units.py  availability_enrich.py  batch_servo_drives.py  bench.py  bench_ab.py  growth.py  intake.py  price_book.py  price_enrich.py  processor.py  query.py  quickstart.py  schemagen.py
cli/data/: abb_vfd_drives.json  ac_induction_motors.json  amc_drives.json  beckhoff_drives.json  copley_drives.json  delta_vfd_drives.json  elmo_drives.json  fuji_vfd_drives.json  galil_drives.json  hitachi_vfd_drives.json  kollmorgen_drives.json  mitsubishi_vfd_drives.json  parker_drives.json  rexroth_drives.json  rockwell_drives.json  rockwell_vfd_drives.json  schneider_drives.json  schneider_vfd_drives.json  siemens_drives.json  siemens_vfd_drives.json  simple_dc_drives.json  weg_vfd_drives.json  yaskawa_drives.json  yaskawa_vfd_drives.json
docs/: index.html  roadmap.html
docs/design/: aicher-manual.html  bauhaus-catalog.html  index.html  vignelli-transit.html
docs/requests/: 105.html  106.html  107.html  108.html  110.html  111.html  112.html  113.html  114.html  116.html  117.html  118.html  130.html  132.html  133.html  134.html  135.html  136.html  150.html  56.html  57.html  58.html  59.html  60.html  61.html  62.html  63.html  64.html  65.html  66.html  72.html  74.html  76.html  78.html  80.html  81.html  82.html  83.html  84.html  90.html  (+3 more)
docs/roadmap/: api.html  bauhaus-followup.html  bauhaus.html  build.html  db-cleanup.html  hardening.html  longterm-board.html  longterm-configuration.html  longterm-growth-cli.html  marketing.html  paygate.html  pricing.html  python-backend.html  python-stripe.html  schema-breaking-harmonize.html  seo.html  style.css
scripts/: build_backend_py.sh  gen_roadmap.py  gen_types.py
specodex/: browser.py  extract.py  ingest_log.py  llm.py  quality.py  relations.py  scraper.py  spec_rules.py  units.py  url_safety.py  utils.py
specodex/admin/: motor_mount_backfill.py
specodex/db/: dynamo.py
specodex/double_tap/: __init__.py  captions.py  prompt.py  runner.py  verifier.py
specodex/integration/: adapters.py  compat.py  ports.py
specodex/models/: common.py  communication_protocol.py  datasheet.py  drive.py  electric_cylinder.py  encoder.py  encoder_taxonomy.md  gearhead.py  linear_actuator.md  linear_actuator.py  manufacturer.py  motor.py  product.py
specodex/pricing/: extract.py  fetch.py  pricebook.py  resolver.py  shopping.py
stripe_py/: README.md
stripe_py/src/billing/: apikeys.py  checkout.py  (+5 more)
stripe_py/tests/: test_apikeys.py  test_query_usage.py  test_router.py  test_webhook.py
tests/integration/: test_concurrent_writes.py  test_db_integration.py  test_deploy_readiness.py  test_motor_mount_backfill.py
tests/post_deploy/: test_smoke.py  test_smoke_extended.py
tests/unit/: test_admin.py  test_audit_dedupes.py  test_availability.py  test_batch_servo_drives.py  test_bench_ab.py  test_common_validators_property.py  test_compat_property.py  test_db.py  test_double_tap.py  test_double_tap_verifier_property.py  test_electric_cylinder.py  test_encoder.py  test_encoder_coercers_property.py  test_gearhead_coerce_property.py  test_growth_preflight.py  test_ids_property.py  test_ingest_log.py  test_ingest_log_property.py  test_integration.py  test_llm_schema.py  test_merge_property.py  test_models.py  test_models_common.py  test_motor_mount_backfill.py  test_page_finder_property.py  test_parse_gemini_property.py  test_performance.py  test_placeholders_property.py  test_price_enrich.py  test_pricebook.py  test_pricebook_property.py  test_pricing.py  test_pricing_parsers_property.py  test_processor.py  test_processor_property.py  test_quality.py  test_quality_property.py  test_relations.py  test_relations_property.py  test_resilience.py  (+10 more)
todo/: API.md  BAUHAUS.md  BAUHAUS_FOLLOWUP.md  BOARD_FEEDBACK.md  BUILD.md  CATAGORIES.md  CONFIGURATION.md  DB_CLEANUP.md  DEDUPE.md  DOUBLE_TAP.md  DOUBLE_TAP_encoder_taxonomy.md  GROWTH_CLI.md  HARDENING.md  MARKETING.md  MODELGEN.md  PAYGATE.md  PHASE5_RECOVERY.md  PRICING.md  PYTHON_BACKEND.md  PYTHON_STRIPE.md  README.md  SCHEMA.md  SCHEMA_BREAKING_HARMONIZE.md  SEO.md  STYLE.md
todo/longterm/: BOARD.md  GROWTH_CLI.md  PYTHON_STRIPE.md
(+127 files in other folders)
