[project]
name = "specodex"
version = "0.1.0"
description = "Extract technical specifications from product datasheets using AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.74.0",
    "pypdf2>=3.0.1",
    "pydantic>=2.13.3",
    "boto3>=1.43.2",
    "tenacity>=9.1.4",
    "pycryptodome>=3.20.0",
    "playwright>=1.59.0",
    "google-api-python-client>=2.195.0",
    "python-dotenv>=1.2.2",
    "pymupdf>=1.27.2.3",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
]

[project.scripts]
specodex = "specodex.scraper:main"
page-finder = "specodex.page_finder:main"
dsm-agent = "cli.agent:main"
dsm = "cli.query:main"
web-scraper = "specodex.web_scraper:main"

[dependency-groups]
dev = [
    "awslambdaric>=4.0.0",
    "hypothesis>=6.152.4",
    "moto[dynamodb]>=5.2.0",
    "mypy>=1.20.2",
    "pydantic-to-typescript>=2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]

[tool.setuptools]
packages = ["specodex", "cli"]

[tool.uv]
package = true
